<resources>
    <string name="app_name">Mafia</string>
    <string name="mafia">мафия</string>
    <string name="play">играть</string>
    <string name="roles">роли</string>
    <string name="setting">настройка</string>
    <string name="plus">+</string>
    <string name="pinned_roles">роли:</string>
    <string name="enter_player_name">введите имя игрока</string>
    <string name="accept">принять</string>
    <string name="cancel">отмена</string>
    <string name="count">кол-во</string>
    <string name="start">начать</string>
    <string name="new_game">новая игра</string>
</resources>