<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_background_shape">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="@drawable/toolbar_shape"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="396dp"
        android:layout_height="52dp"
        android:gravity="center_vertical"
        android:text="@string/enter_player_name"
        android:textAlignment="center"
        android:textAppearance="@style/ToolbarTextStyle"
        android:textSize="34dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="@+id/toolbar3"
        app:layout_constraintTop_toTopOf="@+id/toolbar3" />

    <EditText
        android:id="@+id/enter_player_name"
        android:layout_width="268dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/role_bar_shape"
        android:ems="10"
        android:inputType="text"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3" />

    <Button
        android:id="@+id/accept_player"
        android:layout_width="123dp"
        android:layout_height="41dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_shape"
        android:text="@string/accept"
        android:textAppearance="@style/ButtonStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_player_name" />

    <Button
        android:id="@+id/cancel_player"
        android:layout_width="123dp"
        android:layout_height="41dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/button_shape"
        android:text="@string/cancel"
        android:textAppearance="@style/ButtonStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_player_name" />

    <View
        android:id="@+id/view3"
        android:layout_width="209dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/accept_player"
        tools:layout_editor_absoluteX="110dp" />

</androidx.constraintlayout.widget.ConstraintLayout>